signup component placeholder changes

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -64,7 +64,7 @@
                       <input
                         type="password"
                         class="form-control"
-                        placeholder="Re-Enter your email"
+                        placeholder="Re-Enter your password"
                         formControlName="ConfirmPassword"
                       />
                     </div>
