dashboard component bankbalance error handling

--- a/src/app/admin-portal/dashboard/dashboard.component.html
+++ b/src/app/admin-portal/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
                 <!-- investment + total penalty + realized profit - current investment - total charge  -->
               </div>
               <div class="h5 mb-0 font-weight-bold text-gray-800">
-                ₹ {{ DashboardData.BankBalance | number : "1.0-2" }}
+                ₹ {{ DashboardData?.BankBalance | number : "1.0-2" }}
               </div>
             </div>
             <div class="col-auto">
