DashboardData error handling

--- a/src/app/admin-portal/dashboard/dashboard.component.html
+++ b/src/app/admin-portal/dashboard/dashboard.component.html
@@ -29,11 +29,8 @@
               >
                 INSTALLMENT AMOUNT
               </div>
-              <div
-                *ngIf="DashboardData?.TotalInvestment"
-                class="h5 mb-0 font-weight-bold text-gray-800"
-              >
-                ₹ {{ DashboardData.TotalInvestment | number : "1.0-0" }}
+              <div class="h5 mb-0 font-weight-bold text-gray-800">
+                ₹ {{ DashboardData?.TotalInvestment | number : "1.0-0" }}
               </div>
             </div>
             <div class="col-auto">
@@ -78,7 +75,7 @@
                 TOTAL INVESTMENT
               </div>
               <div class="h5 mb-0 font-weight-bold text-gray-800">
-                ₹ {{ DashboardData.CurrentInvestment | number : "1.0-2" }}
+                ₹ {{ DashboardData?.CurrentInvestment | number : "1.0-2" }}
               </div>
             </div>
             <div class="col-auto">
@@ -122,7 +119,7 @@
                 TOTAL ACCOUNT
               </div>
               <div class="h5 mb-0 font-weight-bold text-gray-800">
-                {{ DashboardData.TotalAccount }}
+                {{ DashboardData?.TotalAccount }}
               </div>
             </div>
             <div class="col-auto">
@@ -144,7 +141,7 @@
                 TOTAL PENALTY
               </div>
               <div class="h5 mb-0 font-weight-bold text-gray-800">
-                ₹ {{ DashboardData.TotalPenalty | number : "1.0-2" }}
+                ₹ {{ DashboardData?.TotalPenalty | number : "1.0-2" }}
               </div>
             </div>
             <div class="col-auto">
@@ -169,7 +166,7 @@
                 <div class="col-auto">
                   <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
                     <!-- 50% (15000) -->
-                    ₹ {{ DashboardData.TotalProfitLoss | number : "1.0-2" }}
+                    ₹ {{ DashboardData?.TotalProfitLoss | number : "1.0-2" }}
                   </div>
                 </div>
                 <div class="col">
@@ -200,7 +197,6 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <div
-                *ngIf="DashboardData?.TotalMember"
                 class="text-xs font-weight-bold text-primary text-uppercase mb-1"
               >
                 TOTAL MEMBER
