environment variable changes for local setup

--- a/src/app/admin-portal/dashboard/dashboard.component.html
+++ b/src/app/admin-portal/dashboard/dashboard.component.html
@@ -96,9 +96,7 @@
               >
                 CURRENT VALUE
               </div>
-              <div class="h5 mb-0 font-weight-bold text-gray-800">
-                ₹ 322,500
-              </div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">₹ 0</div>
             </div>
             <div class="col-auto">
               <i class="fas fa-calendar fa-2x text-gray-300"></i>
